Closed Bug 206254 Opened 21 years ago Closed 21 years ago

Can't call IsInitialized on nsBaseHashtable and derived classes

Categories

(Core :: XPCOM, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: peterv, Assigned: benjamin)

Details

Attachments

(1 file)

../../../dist/include/xpcom/nsTHashtable.h:134: `PRBool 
   nsTHashtable<EntryType>::IsInitialized() const [with EntryType = 
   nsBaseHashtableET<nsCStringHashKey, nsCOMPtr<nsIXBLDocumentInfo> >]' is 
   inaccessible
/Users/peterv/source/mozilla/trunk/mozilla/content/xbl/src/nsBindingManager.cpp:973:
within
   this context

I need a way to know whether my hashtable has already been Init'ed.
no problem
Attachment #123683 - Flags: review?(alecf)
Comment on attachment 123683 [details] [diff] [review]
Add IsInitialized() to nsBaseHashtable

sr=alecf
Attachment #123683 - Flags: review?(alecf) → review+
Comment on attachment 123683 [details] [diff] [review]
Add IsInitialized() to nsBaseHashtable

r=peterv
Attachment #123683 - Flags: superreview+
Fixed-on-trunk
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: