bug 206254 allow nsBaseHashtable::IsInitialized() and bug 206528 nsBaseHashtable should initialize mLock. r=alecf